src/objects/dwp_dace__Rules_Set_Rule__c.object
<CustomObject>
    <description>Relationship between rules sets and rules</description>
    <fields>
        <fullName>dwp_dace__rule_id__c</fullName>
        <description>Relation with a rule</description>
        <inlineHelpText>Relation with a rule</inlineHelpText>
        <label>Rule Reference</label>
        <referenceTo>dwp_dace__Rule__c</referenceTo>
        <relationshipLabel>Rules Set Rules</relationshipLabel>
        <relationshipName>Rules_Set_Rules</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>dwp_dace__rule_link__c</fullName>
        <description>Unique identifier of the related rule</description>
        <formula>IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,HYPERLINK( &quot;#/sObject/&quot; +  dwp_dace__rule_id__c  ,   dwp_dace__rule_id__r.dwp_dace__rule_unique_id__c ,&quot;_top&quot; ),HYPERLINK(dwp_dace__rule_id__c  ,  dwp_dace__rule_id__r.dwp_dace__rule_unique_id__c,&quot;_top&quot; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unique identifier of the related rule</inlineHelpText>
        <label>Rule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_dace__rule_order_num__c</fullName>
        <description>Represents the order of precedence in the rule evaluation</description>
        <inlineHelpText>Represents the order of precedence in the rule evaluation</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dwp_dace__rules_set_id__c</fullName>
        <description>Relation with a rules set</description>
        <inlineHelpText>Relation with a rules set</inlineHelpText>
        <label>Rules Set Reference</label>
        <referenceTo>dwp_dace__Rules_Set__c</referenceTo>
        <relationshipLabel>Rules Set Rules</relationshipLabel>
        <relationshipName>Rules_Set_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>dwp_dace__rules_set_link__c</fullName>
        <description>Unique identifier of the related rules set</description>
        <formula>IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,HYPERLINK( &quot;#/sObject/&quot; + dwp_dace__rules_set_id__c ,  dwp_dace__rules_set_id__r.dwp_dace__rules_set_unique_id__c,&quot;_top&quot; ),HYPERLINK(dwp_dace__rules_set_id__c ,  dwp_dace__rules_set_id__r.dwp_dace__rules_set_unique_id__c,&quot;_top&quot; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unique identifier of the related rules set</inlineHelpText>
        <label>Rules Set</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_dace__rules_set_rule_active_type__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, the relationship between the rules set and the rule is considered as active</description>
        <inlineHelpText>If checked, the relationship between the rules set and the rule is considered as active</inlineHelpText>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <label>Rules Set Rule</label>
    <nameField>
        <displayFormat>RSR-{0000000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rules Set Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>